--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>David Chu's China Bistro</title>
+    <title>DM Site</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
@@ -23,7 +23,7 @@
             <a href="index.html"><h1>DM Tutors</h1></a>
             <p>
               <!-- <img src="images/star-k-logo.png" alt="Kosher certification"> -->
-              <span>Tatai Certified</span>
+<!--               <span>Tatai Certified</span> -->
             </p>
           </div>
 
@@ -101,11 +101,11 @@
     </nav>
 
     <div class="jumbotron">
-      <h1>Welcome to DM Tutors!</h1>
+      <h1>Welcome!</h1>
       <p>
-        I'm a genius. My nephew is awesome. I want to teach you stuff.
+        About the site. Vision etc
       </p>
-      <p><a class="btn btn-primary btn-lg" href="sign-up-form.html" role="button" id="signupbutton">Sign Up Today</a></p>
+      <p><a class="btn btn-primary btn-lg" href="sign-up-form.html" role="button" id="signupbutton">Sign Up</a></p>
     </div>
 
   </div><!-- End of #main-content -->
